Make sure the cursor is visible even in darkmode. With other words just make sure that codemirror's cursor actually uses the obsidian caret-color variable

--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,10 @@
 	);
 }
 
+.screenplay .cm-cursorLayer .cm-cursor {
+	border-left: 2px solid var(--caret-color);
+}
+
 /****************************** index view */
 
 .screenplay-index-cards {
